# pHashChecker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  editableimage.cpp  editableimage.h  hashworker.cpp  hashworker.h  imageviewer.cpp  imageviewer.h  imageviewerdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  thumbnail.cpp  thumbnail.h  translations.qrc  utils.h
src/: NotificationBar.cpp  NotificationBar.h  aboutdialog.cpp  aboutdialog.h  convertedimage.hpp  editableimage.cpp  editableimage.h  hashdialog.cpp  hashdialog.h  hashworker.cpp  hashworker.h  imageviewer.cpp  imageviewer.h  imageviewerdialog.cpp  imageviewerdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  notificationbar.cpp  notificationbar.h  qstringhasher.hpp  settingpanel.cpp  settingpanel.h  stopwatchdialog.cpp  stopwatchdialog.h  thumbnail.cpp  thumbnail.h  timerdialog.cpp  timerdialog.h
src/lang/: ja_JP.ts  zh_CN.ts
src/utils/: imageutils.h  path.h  sizeformat.h  utils.h  versions.h  widgethelpers.h
